--- a/style.css
+++ b/style.css
@@ -1268,9 +1268,31 @@ CONTACT
     }
 
     /* 下層ページ：contact */
+    .p-contact-form__body {
+        padding: 30px;
+    }
 
+    .form__radio:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
 
+    .form__radio {
+        display: block;
+    }
 
+    .form__input, .form__select {
+        width: 100%;
+    }
+
+    .form input[type=tel] {
+        width: 100%;
+    }
+
+    .form__textarea {
+        width: 100%;
+        min-width: 100%;
+    }
 
     /* contact */
     .contact {
