--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ section {
     right: 1.2em;
 }
 
-
 /* ------------------------------
 見出し
 ------------------------------ */
@@ -850,6 +849,8 @@ RECRUIT
     margin-right: 5px;
     border: 1px solid #333;
     border-radius: 50%;
+    position: relative;
+    top: 1px;
 }
 
 .form__input,
